Sat May 16 19:41:48 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/feed.rb, test/test_maker_atom_feed.rb:
	remove needless codes.

Sat May 16 19:40:45 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/entry.rb: fix a typo.

Sat May 16 19:38:05 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/feed.rb, test/test_maker_atom_entry.rb,
	test/test_maker_atom_feed.rb: fix duplicated dc:date.
	Reported by Kazuhiro NISHIYAMA. Thanks!!! [ruby-list:46014]

Sat May 16 19:36:52 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/base.rb, lib/rss/maker/1.0.rb, lib/rss/maker/feed.rb,
	test/rss/test_maker_1.0.rb, test/rss/test_maker_atom_feed.rb:
	RSS 1.0 and Atom feed maker treat maker.channel.language as
	maker.channel.dc_language.

Sat May 16 19:35:48 2009  Kouhei Sutou  <kou@cozmixng.org>

	* sample/rss/rss_recent.rb, sample/rss/list_description.rb: use
	UTF-8.

Sat May 16 19:34:09 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb, test/rss/test_version.rb (RSS::VERSION):
	0.2.5 -> 0.2.6.

Fri May 15 17:33:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_join), ext/thread/thread.c (wake_one): adjusts
	  targets of rest waiting threads to join.  [ruby-core:23457]

Sat May  9 23:26:04 2009  Akinori MUSHA  <knu@iDaemons.org>

	* lib/delegate.rb (Delegator#method_missing)
	  (DelegateClass()#method_missing): Properly pass a given block
	  through. [ruby-dev:38390]

Fri May  8 02:34:25 2009  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (SortedSet#add): Do not require each newly added
	  element to be Comparable but to respond to <=>. [ruby-dev:38371]

Thu May  7 13:58:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* range.c (range_eql): fixed rdoc.

Thu May  7 01:59:35 2009  Tanaka Akira  <akr@fsij.org>

	* util.c: suppress strict-aliasing warning with gcc-4.4.0 -O2 to fix
	  infinite loop by ruby -e "1.402e-45" .

Wed May  6 09:27:04 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
