@@ -1,5 +1,4 @@
 require "rss/2.0"
-require "rss/content"
 
 module RSS
   Rss.install_ns(CONTENT_PREFIX, CONTENT_URI)
