@@ -1,3 +1,9 @@
+Sat May 16 19:44:09 2009  Kouhei Sutou  <kou@cozmixng.org>
+
+	* lib/rss/content/*, lib/rss/dublincore/*: fix circular require.
+	* test/test_maker_atom_feed.rb,
+	test/test_maker_atom_entry.rb: suppress warnings.
+
 Sat May 16 19:41:48 2009  Kouhei Sutou  <kou@cozmixng.org>
 
 	* lib/rss/maker/feed.rb, test/test_maker_atom_feed.rb:
